Corrected modal error

--- a/src/main/webapp/partials/authoring/ontowiki.html
+++ b/src/main/webapp/partials/authoring/ontowiki.html
@@ -21,20 +21,16 @@
 
   <!-- Modal -->
   <div class="modal fade" id="modalWindow">
-    <div class="modal-dialog">
-      <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
           <h5 class="modal-title green bold">OntoWiki</h5>
         </div>
         <div class="modal-body">
         <iframe id="mod-frame" src="http://10.0.0.90/ontowiki"></iframe>
         </div>
         <div class="modal-footer">
-          <button class="btn-sm btn-success" class="close" data-dismiss="modal">Close</button>
+          <button type="button" class="btn-sm btn-success" ng-click="close()">Close</button>
         </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
-  </div>
+</div>
 
