--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -1,3 +1,30 @@
+<div class="col-lg-8">
+	<h3 class="green bold">LIMES</h3>
+	<form class="form-inline InputForm" role="form">
+	  <div class="form-group">
+	    <label for="exampleInputEmail1">Email address</label>
+	    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+	  </div>
+	  <div class="form-group">
+	    <label for="exampleInputPassword1">Password</label>
+	    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+	  </div>
+	  <br>
+	  <div class="form-group">
+	    <label for="ConfigFile">Upload your own configuration</label>
+	    <input type="file" id="ConfigFile">
+	    <p class="help-block">Example block-level help text here.</p>
+	  </div>
+	  <div class="checkbox">
+	    <label>
+	      <input type="checkbox"> Check me out
+	    </label>
+	  </div>
+	  <br>
+	  <button type="submit" class="btn btn-default">Submit</button>
+	</form>
+</div>
+
 <!-- 
 <div ng-controller="ModalWindow">
     <a data-toggle="modal" href="#modalWindow" class="btn btn-primary btn-large" ng-click="open()">Launch demo modal</a>
@@ -14,13 +41,12 @@
     </div>
 </div>
 
- -->
-
 <div ng-controller="ModalWindow">
 	<h3 class="green bold">LIMES - SAIM</h3>
     <a class="btn btn-primary btn-large" ng-click="OpenFullWindow()">Launch LIMES</a>
 
   <!-- Modal -->
+  <!--  
   <div class="modal fade" id="modalWindow">
         <div class="modal-header">
           <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
@@ -32,5 +58,6 @@
         <div class="modal-footer">
           <button type="button" class="btn-sm btn-success" ng-click="close()">Close</button>
         </div>
-  </div><!-- /.modal -->
   </div>
+  </div>
+   -->
