--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -1,6 +1,6 @@
 
   <div class="row contents">
-  	<div class="col-lg-2">
+  	<div class="col-sm-2">
 			
 			<div class="panel-group" id="accordion" ng-controller="StackMenuCtrl">
 			  <div class="panel panel-default" ng-repeat="group in groups">
@@ -21,8 +21,8 @@
 			
 		</div>
 
-	  <div class="col-lg-10 contents" app-view-segment="1">
-	  	<div class="col-lg-7">
+	  <div class="col-sm-10 contents" app-view-segment="1">
+	  	<div class="col-sm-7">
  		 <p>
 	    This is Version 0.1 of the GeoKnow Generator, which comprises a number of tools for managing the life-cycle of Geographic Linked Data. The life-cycle comprises in particular the stages:
 			</p>
