--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -28,14 +28,14 @@
 	</div>
 
   <!-- Modal -->
-  <div class="modal fade" id="modalWindow">
+  <div class="modal fade" id="modalWindow" ng-controller="FaceteFormCtrl">
     
         <div class="modal-header">
           <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
           <h5 class="modal-title green bold">Facete</h5>
         </div>
         <div class="modal-body">
-        <iframe id="mod-frame" src="http://[2001:638:902:2010:0:168:35:114]:8080/facete/?service-uri={{facete.service}}&default-graph-uri={{faceteds.dataset}}"></iframe>
+        <iframe id="mod-frame" src="http://[2001:638:902:2010:0:168:35:114]:8080/facete/?service-uri={{service}}&default-graph-uri={{dataset}}"></iframe>
         <!-- http://localhost:8080/facete/?service-uri=http://localhost:8890/sparql&default-graph-uri=http://localhost/lod2democonfiguration -->
         <!--  http://[2001:638:902:2010:0:168:35:114]:8080/facete/?service-uri=http://localhost:8890/sparql&default-graph-uri=http://localhost/lod2democonfiguration -->
         </div>
