Update ImportRDF for large files and partial integration of config.js

--- a/src/main/webapp/partials/settings/components.html
+++ b/src/main/webapp/partials/settings/components.html
@@ -3,7 +3,7 @@
 
 <p>Current workbench configuration has integrated the following components.</p>
 
-<table class="table table-striped" ng-controller="SettingsComponentCtrl">
+<table class="table table-striped" ng-controller="ComponentCtrl">
 <thead>
   <tr>
   	<th>URI</th>
