--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -4,19 +4,19 @@
     <div class="col-lg-8">
 	<h3 class="green bold">Facete</h3>
 	
-    <b>A tool for exploring (geographical) Linked Data datasets on the Web.</b>
+    <b>A tool for exploring (geographical) Linked Data datasets on the Web</b>
     <br>
     <br>
     <p>To get started select a data set from the drop down menu.</p>
 	<form class="form-horizontal InputForm" role="form" ng-controller="FaceteFormCtrl">
 	  <div class="form-group">
 	    <label for="ServiceURI">Service URI</label>
-	    <input type="url" class="form-control" id="ServiceURI" disabled="disabled" ng-model="service"></input>
+	    <input type="url" class="form-control" id="ServiceURI" disabled="disabled" ng-model="facete.service"></input>
 	  </div>
 	
 	<div class="form-group">
 	    <label for="DataSet">DataSet</label>
-			<select id="DataSet" class="form-control" ng-model="dataset" 
+			<select id="DataSet" class="form-control" ng-model="facete.dataset" 
 			ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
 			</select>
 	</div>
