Small improvements, added favicon

--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -35,7 +35,8 @@
           <h5 class="modal-title green bold">Facete</h5>
         </div>
         <div class="modal-body">
-        <iframe id="mod-frame" src="http://[2001:638:902:2010:0:168:35:114]:8080/facete/?service-uri={{service}}&default-graph-uri={{dataset}}"></iframe>
+        <ng-portlet></ng-portlet>
+        <!-- <iframe id="mod-frame" src="http://[2001:638:902:2010:0:168:35:114]:8080/facete/?service-uri={{facete.service}}&default-graph-uri={{facete.dataset}}"></iframe> -->
         <!-- http://localhost:8080/facete/?service-uri=http://localhost:8890/sparql&default-graph-uri=http://localhost/lod2democonfiguration -->
         <!--  http://[2001:638:902:2010:0:168:35:114]:8080/facete/?service-uri=http://localhost:8890/sparql&default-graph-uri=http://localhost/lod2democonfiguration -->
         </div>
