--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -119,8 +119,10 @@ a.accordion-toggle:hover{
 	color:#BC1B8B;
 }
 
-.panel-heading:hover{
-	background-color:white;
+.panel-default > .panel-heading {
+    background-color: #DDDADA;
+    border-color: #DDDEEE;
+    color: #333333;
 }
 	
 /* Typography */
